# ChangeLog for net-libs/libtorrent
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.82 2006/12/28 16:10:36 flameeyes Exp $

*libtorrent-0.11.1 (28 Dec 2006)

  28 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  -libtorrent-0.10.0.ebuild, -libtorrent-0.11.0.ebuild,
  +libtorrent-0.11.1.ebuild:
  Version bump and old versions cleanup.

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  libtorrent-0.10.4.ebuild:
  Stable on ppc wrt bug #158007.

  14 Dec 2006; Brent Baude <ranger@gentoo.org> libtorrent-0.10.4.ebuild:
  Marking  libtorrent-0.10.4 ppc64 stable for bug 158007

  13 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  libtorrent-0.10.4.ebuild:
  stable x86, bug #158007

  13 Dec 2006; Michael Cummings <mcummings@gentoo.org>
  libtorrent-0.10.4.ebuild:
  amd64 stable, bug 158007

  13 Dec 2006; Timothy Redaelli <drizzt@gentoo.org>
  libtorrent-0.10.4.ebuild:
  Don't try to install TODO, since the file doesn't exists in this release.
  Thanks to Raúl Porcel for reporting on bug #158007.

*libtorrent-0.11.0 (13 Dec 2006)

  13 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  -libtorrent-0.9.3.ebuild, -libtorrent-0.10.1.ebuild,
  -libtorrent-0.10.3.ebuild, -libtorrent-0.10.3-r1.ebuild,
  +libtorrent-0.11.0.ebuild:
  Version bump, and remove old versions.

  21 Nov 2006; Timothy Redaelli <drizzt@gentoo.org> metadata.xml:
  Added myself as co-maintainer.

  20 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  libtorrent-0.10.4.ebuild:
  filtered -fforce-addr on x86, as reported by parafin-spobs@yandex.ru in
  bug #155679

*libtorrent-0.10.4 (27 Oct 2006)

  27 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libtorrent-0.10.4.ebuild:
  Version bump.

*libtorrent-0.10.3-r1 (19 Oct 2006)

  19 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libtorrent-0.10.3-r1.ebuild: