@@ -3,6 +3,7 @@ Hash: SHA1
 
 DIST libtorrent-0.10.4.tar.gz 485174 RMD160 43fdfe827e6f56c7caed2406f5c0c6df28dcf007 SHA1 f809a013469be9a933c1032f8e4ebe08d4150e5a SHA256 fbecbbe10e51f018bc8c921932b6134de0f05495e053429434bc9f25b01d2d2f
 DIST libtorrent-0.11.1.tar.gz 477557 RMD160 f28327d0ebb2a608e3fa3f6f3414db150cc2d000 SHA1 870f63f9a7eda597dbdb4be791ad0d29ea4902e2 SHA256 3a747a03b2f683e71ed3eab2fa2e66689ba58e5d9a17527579583b86f4de46e1
+DIST libtorrent-0.11.2.tar.gz 498588 RMD160 c2734603c0c39c9ec1050848f960b9d7260d48fd SHA1 fbad4577680b353c70ec19f5eb84d12b35b50904 SHA256 c5b1ab66a47b14758e5843c4ac3e4d3fed42aa8558eeae6f80c72811c865c06f
 EBUILD libtorrent-0.10.4.ebuild 1286 RMD160 4582a650604e4f61de314ec588ea5565969f11a7 SHA1 536010fb9c6213f183760c8cbc2f96c4fee8e9bf SHA256 833a0779ab243f5dd4dbe69f40c5c9a8e9d1a953fbad354e6efa46ede3b6fbaa
 MD5 9cdb9a77c8923613d3dd18377b8782c9 libtorrent-0.10.4.ebuild 1286
 RMD160 4582a650604e4f61de314ec588ea5565969f11a7 libtorrent-0.10.4.ebuild 1286
@@ -11,10 +12,14 @@ EBUILD libtorrent-0.11.1.ebuild 1294 RMD160 854037e8d3dfc54541b9097a8cadc91a5fba
 MD5 32b1b13b749a57884e6b99064323af8b libtorrent-0.11.1.ebuild 1294
 RMD160 854037e8d3dfc54541b9097a8cadc91a5fba89d6 libtorrent-0.11.1.ebuild 1294
 SHA256 997d4f857374e305df90556f2a5fd491cc69efc3f8df0d98e2bcc7d831a52b18 libtorrent-0.11.1.ebuild 1294
-MISC ChangeLog 12807 RMD160 177e622572ffab85fd13ff4daa700837ef3c6787 SHA1 e4323ba591fbb21962909d5f01c185b828fc4a7e SHA256 f6ddae26a218825d1ec3280bdd2fe3da2e63d95222618446e5d5580b357bc763
-MD5 7f695484819bfa84cd13afc93554c7e6 ChangeLog 12807
-RMD160 177e622572ffab85fd13ff4daa700837ef3c6787 ChangeLog 12807
-SHA256 f6ddae26a218825d1ec3280bdd2fe3da2e63d95222618446e5d5580b357bc763 ChangeLog 12807
+EBUILD libtorrent-0.11.2.ebuild 1291 RMD160 17656948cd71c1f7c95213c0a82305e8158326ee SHA1 406510544c6e4d4ce3bce3d67ef86bf9467c7d97 SHA256 3e18f815110e42b40d30851a489594d26fb8127a76dff7c0cd2d98677c2f0ba1
+MD5 929e6f5670b23da39b9f560e20c23125 libtorrent-0.11.2.ebuild 1291
+RMD160 17656948cd71c1f7c95213c0a82305e8158326ee libtorrent-0.11.2.ebuild 1291
+SHA256 3e18f815110e42b40d30851a489594d26fb8127a76dff7c0cd2d98677c2f0ba1 libtorrent-0.11.2.ebuild 1291
+MISC ChangeLog 12935 RMD160 c08b4ddf2e543ce2493b4d4204248de661b81199 SHA1 1cd72fba5e2e46bb1f350ab5cba717cc69e074c9 SHA256 cf9d082a6d5a7d12c93b91cbb1ea943f99079947868c12449a03027bc8075d04
+MD5 dc443a491eac0ba8192bec8528e952b9 ChangeLog 12935
+RMD160 c08b4ddf2e543ce2493b4d4204248de661b81199 ChangeLog 12935
+SHA256 cf9d082a6d5a7d12c93b91cbb1ea943f99079947868c12449a03027bc8075d04 ChangeLog 12935
 MISC metadata.xml 334 RMD160 d33353f70b98c2524187319b19159ea1de73a26b SHA1 58734602f2d1723809bf220905597b15cec543f4 SHA256 34bdc01ccdf73dd8b073918c8e3501a731917495637214d11cd466f196d211a0
 MD5 8f5f77795168e3afc86e69d61cbfef0f metadata.xml 334
 RMD160 d33353f70b98c2524187319b19159ea1de73a26b metadata.xml 334
@@ -25,10 +30,13 @@ SHA256 31749d47bf485006c2abd26befc1c0e76653ea4bb8ecd1c74b35a565a5c50c6d files/di
 MD5 0285185e392b65d7d59a7b5fbfab4e4e files/digest-libtorrent-0.11.1 253
 RMD160 8ca07522bacb3930885e58d27e206de5ca2be3d5 files/digest-libtorrent-0.11.1 253
 SHA256 27929ee23572deb74ee63f2ea2049d9b3a7931ea522d4eac6fcca29b697b4285 files/digest-libtorrent-0.11.1 253
+MD5 bfc919cda88380d3c75323f393ad9d36 files/digest-libtorrent-0.11.2 253
+RMD160 b62fbeb964badc9aea07a3a14a70790fc0f5e155 files/digest-libtorrent-0.11.2 253
+SHA256 166112661dc85730df53f63cd7c01ef6cbae09812dbe8d510ca9764a9249a698 files/digest-libtorrent-0.11.2 253
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v2.0.1 (GNU/Linux)
 
-iD8DBQFFk+zsAiZjviIA2XgRAgQuAJ9nhtMwfwVg4p0BykOcY8Nw12RzRgCffC4W
-yk/FWWn2621LjRIC2v9wW68=
-=q5Ii
+iD8DBQFFu2uPGDyatLGpTbYRArLVAJ9wnCySifgKYLX34H+U9ewPk2M4ZQCggQq2
+6HlsaQ8nLZao5gvresglFY4=
+=vphh
 -----END PGP SIGNATURE-----
