@@ -1,0 +1,3 @@
+MD5 e31a3738b897c9affae6e4893aaa1f0d libtorrent-0.11.2.tar.gz 498588
+RMD160 c2734603c0c39c9ec1050848f960b9d7260d48fd libtorrent-0.11.2.tar.gz 498588
+SHA256 c5b1ab66a47b14758e5843c4ac3e4d3fed42aa8558eeae6f80c72811c865c06f libtorrent-0.11.2.tar.gz 498588
