@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libtorrent
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.82 2006/12/28 16:10:36 flameeyes Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.83 2007/01/27 15:11:05 drizzt Exp $
+
+*libtorrent-0.11.2 (27 Jan 2007)
+
+  27 Jan 2007; Timothy Redaelli <drizzt@gentoo.org>
+  +libtorrent-0.11.2.ebuild:
+  Version bump
 
 *libtorrent-0.11.1 (28 Dec 2006)
 
